<resources>
    <string name="app_name">MyContactList</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="saveButtonText">Save</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="contactLabelText">Contact</string>
    <string name="addressLabelText">Address:</string>
    <string name="birthdayLabelText">Birthday:</string>
    <string name="changeLabelText">Change</string>
    <string name="cellphoneLabelText">Cellphone:</string>
    <string name="home_phoneLabelText">Home Phone:</string>
    <string name="selectButtonText">Select</string>
    <string name="sort_contact_by">Sort Contacts By:</string>
    <string name="name_settings">Name</string>
    <string name="city_settings">City</string>
    <string name="birthday_settings">Birthday</string>
    <string name="sort_order_settings">Sort Order:</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="title_activity_contact_map2">Map</string>
</resources>